# maze

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  environment.yml  maze-core-environment.yml  maze_blocks_mib.py  maze_mib.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  bug_report.md  execute_tests.sh  feature_request.md  pull_request_template.md
.github/workflows/: codeql-analysis.yml  dockerhub-ci-core.yml  dockerhub-ci-rllib-tensorflow.yml  dockerhub-ci.yml  github-ci.yml
docker/: .env  Dockerfile  docker-bake.hcl  docker-compose.yml  maze-core-env.dockerfile  maze-core.dockerfile  playground.dockerfile  run_locally.sh  skaffold_build.sh
docs/: __init__.py  cookiecutter_input.json  requirements.txt
docs/guidelines/: coding_guidelines.md  docstrings.py
docs/source/: conf.py  index.rst
docs/source/_templates/: force_git_to_create_empty_dir  layout.html  page.html
docs/source/agent_deployment/: agent_integration.rst  agent_packaging.rst
docs/source/best_practices_and_tutorials/: control_flows_struct_envs.rst  example_cmds.rst  integrating_gym_environment.rst  maze_and_other_frameworks.rst  plain_python_training_example.rst  plain_python_training_example_high_level.rst  plain_python_training_example_low_level.rst  safety_and_reliability.rst  struct_env_tutorial.rst  tricks_of_the_trade.rst
docs/source/concepts_and_structure/: control_flows_struct_envs.rst  env_hierarchy.rst  event_system.rst  hydra.rst  policy_and_agent.rst  rendering.rst  run_context_overview.rst
docs/source/environment_customization/: customizing_environments.rst  environment_wrappers.rst  observation_normalization.rst  observation_pre_processing.rst  reward_aggregation.rst
docs/source/getting_started/: api_contents.rst  first_example.rst  installation.rst  step_by_step_tutorial.rst
docs/source/logging/: action_distribution_visualization.rst  event_kpi_logging.rst  log_stats_writer_and_tensorboard.rst  (+1 more)
docs/test/: test_run_context_snippets.py
evaluation/: rollout_evaluation_plots.py  rollout_evaluation_plots_config.yml  viewer.ipynb
flappy/: flappyB.py
hydra_plugins/: maze_local_launcher.py
maze/: __init__.py  maze_cli.py  maze_hyper_opt.py  runner.py
maze/api/: config_auditor.py  config_loader.py  run_context.py  utils.py
maze/conf/: __init__.py  conf_rllib.yaml  conf_rollout.yaml  conf_train.yaml
maze/conf/algorithm/: a2c.yaml  (+5 more)
maze/core/: annotations.py
maze/distributions/: bernoulli.py  beta.py  categorical.py  dict.py  distribution.py  distribution_mapper.py  gaussian.py  multi_categorical.py  squashed_gaussian.py  torch_dist.py  utils.py
maze/normalization_strategies/: __init__.py
maze/perception/: perception_registry.py  perception_utils.py  weight_init.py
maze/preprocessors/: __init__.py
maze/rllib/: maze_rllib_action_distribution.py  maze_rllib_callback_logging.py  maze_rllib_env.py  maze_rllib_runner.py  maze_tune_callback_save_model.py
maze/test/: conftest.py  pytest.ini  test_cli.py
maze/utils/: bcolors.py  exception_report.py  get_size_of_objects.py  log_stats_utils.py  notebooks.py  plot_env_profiling.py  process.py  simulated_env.py  tensorboard_reader.py  timeout.py
tutorials/: README.md
tutorials/examples/: a2c_gym_cartpole.py  a2c_gym_cartpole_default_nets.py  cartpole_custom_net.py  es_gym_cartpole.py
tutorials/hydra_plugins/: tutorial_search_path_plugin.py
tutorials/notebooks/: README.md
tutorials/test/: __init__.py  conftest.py  test_tutorial_maze_env.py
(+802 files in other folders)
