[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
description = MazeRL is a development framework for building applied reinforcement learning systems, addressing real-world decision problems. It supports the complete development life cycle of RL applications, ranging from simulation engineering up to agent development, training and deployment.
long_description = file: README.md
long_description_content_type = text/markdown
author = enliteAI GmbH
author_email = office@enlite.ai
url = https://github.com/enlite-ai/maze
keywords = applied-reinforcement-learning reinforcement-learning machine-learning deep-learning distributed optimization
license = MazeRL Software License (Research, Non-Commercial)

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 120
